Menambahkan manfaat git

--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
 <body>
     <h1>1. Deskripsi</h1>
     <p>Git adalah version control system, git menyimpan perubah code atau sorce code kita</p>
+
+    <h2>2. Manfaat</h2>
+    <p> Bisa menyimpan seluruh versi source code
+        Berkolaborasi membangun sistem jadi mudah
+        Bisa berkontribusi di proyek open source
+        Memudahkan dalam tracking perubahan
+        Memahami cara deploy modern
+        Dsb
+        </p>
 </body>
 </html>
