Menambahkan perintah-perintah di Git

--- a/index.html
+++ b/index.html
@@ -18,5 +18,31 @@
         Memahami cara deploy modern
         Dsb
         </p>
+
+    <h2>3. Perintah-perintah di Git</h2>
+        <p>a. Git init
+            Digunakan untuk menginisialisasi repository
+            Atau memberi tahu folder saat ini akan dijadikan repository
+            Kita tidak bisa menggunakan git tanpa menginisialisasinya
+            </p>
+        <p>b. Git config
+            Konfigurasi email dan username
+            Biasanya disamakan dengan akun gitlab / github
+            Config global untuk konfigurasi ke server
+            Config local untuk konfigurasi local
+            Untuk melihat semua konfigurasi yang ada di git bisa menggunakan perintah
+            </p>
+        <p>c. Git clone
+            Digunakan untuk mengcopy repo dari server
+            </p>
+        <p>d. Git remote
+            Semacam api untuk berinteraksi dari client dengan server
+            </p>
+        <p>e. Git push
+            Untuk mengirimkan commit ke server
+            </p>
+        <p>f. Git pull
+            Untuk mengambil commit dari server jika ada perubahan di server yang dibuat oleh branch lain
+            </p>
 </body>
 </html>
