--- a/index.html
+++ b/index.html
@@ -44,5 +44,27 @@
         <p>f. Git pull
             Untuk mengambil commit dari server jika ada perubahan di server yang dibuat oleh branch lain
             </p>
+
+        <h2>Branch</h2>
+        <p>Deskripsi
+            Cabang / copyan dari repo 
+            Manfaat
+                Parallel development
+                Bisa digunakan untuk memanajemen pengembangan. Misal test branch, unstable branch, stable branch
+            Kapan dibutuhkan
+                Saat mengembangakan fitur baru
+            </p>
+        <p> Git branch: melihat semua branch (local)
+            Git branch --all: melihat semua branch (public)
+            Git branch nama_branch: membuat branch baru
+            Git checkout nama_branch: untuk berpindah branch
+            Git branch -d nama_branch: untuk menghapus branch
+            </p>
+        <p>Git merge nama_branch
+            untuk menggabungkan commit dari 2 branch
+            Relatif terhadap branch yang aktif saat ini
+            Untuk melakukan merge harus dipastikan tidak ada file yang belum di commit
+            </p>
+        
 </body>
 </html>
