--- a/index.html
+++ b/index.html
@@ -66,5 +66,15 @@
             Untuk melakukan merge harus dipastikan tidak ada file yang belum di commit
             </p>
         
+        <h2>GUI</h2>
+        <p>Deskripsi
+                Software berbasis GUI untuk memudahkan dalam mengoperasikan git
+            Manfaat
+                Mudah digunakan
+                Solving conflict jadi lebih mudah
+                Mempercepat kinerja
+            Kapan dibutuhkan
+                Setiap saat
+            </p>
 </body>
 </html>
